--- a/outfit/css/reveal.js.css
+++ b/outfit/css/reveal.js.css
@@ -354,6 +354,9 @@ section.copyright>.license{
 }
 
 .reveal section img{
+	/*display: block;
+	margin-left:auto;
+	margin-right:auto;*/
   border: 0;
 }
 .reveal .inline{
