--- a/pages/themes/Observer/examples/slides/paintOnStartingLetter/iepPaintOnStartingLetter/paintOnStartingLetter.css
+++ b/pages/themes/Observer/examples/slides/paintOnStartingLetter/iepPaintOnStartingLetter/paintOnStartingLetter.css
@@ -1,5 +1,12 @@
 body{
-	font-size: 2em;
+	font-size: 1em;
+}
+ul{
+	margin: 0;
+}
+li{
+	list-style-type: none;
+	padding: .3em 0 0 .5em;
 }
 .observerWrapper{
 	width: 10em;
@@ -21,10 +28,9 @@ body{
 	width: 3em;
 	font-size: 1em;
 }
-ul{
-	margin: 0;
-}
-li{
-	list-style-type: none;
-	padding: .3em 0 0 .5em;
+
+#unsubBtn{
+	width: 100%;
+	height: 3em;
+	background: #FFF4C1
 }
